@@ -1,3 +1,4 @@
+* remove deprecated fit_xrr function
 * SGLattice.get_allowed_hkl function
 * make SGLattice.convert_to_P1 a normal method
 * SGLattice improvements: add symmetry operations, equivalent_hkls,
